2006-08-28 font_manager.py: Added /usr/local/share/fonts to list of
           X11 font directories - DSD 

2006-08-28 mahtext2.py: Initial support for complex fractions. Also,
           rendering is now completely separated from parsing. The
           sub/superscripts now work better.
           Updated the mathtext2_demo.py - ES

2006-08-27 qt backends: don't create a QApplication when backend is 
           imported, do it when the FigureCanvasQt is created. Simplifies 
           applications where mpl is embedded in qt. Updated 
           embedding_in_qt* examples - DSD

2006-08-27 mahtext2.py: Now the fonts are searched in the OS font dir and
           in the mpl-data dir. Also env is not a dict anymore. - ES

2006-08-26 minor changes to __init__.py, mathtex2_demo.py. Added matplotlibrc
           key "mathtext.mathtext2" (removed the key "mathtext2") - ES

2006-08-21 mathtext2.py: Initial support for fractions
           Updated the mathtext2_demo.py
           _mathtext_data.py: removed "\" from the unicode dicts
           mathtext.py: Minor modification (because of _mathtext_data.py)- ES

2006-08-20 Added mathtext2.py: Replacement for mathtext.py. Supports _ ^,
           \rm, \cal etc., \sin, \cos etc., unicode, recursive nestings,
           inline math mode. The only backend currently supported is Agg
           __init__.py: added new rc params for mathtext2
           added mathtext2_demo.py example - ES

2006-08-19 Added embedding_in_qt4.py example - DSD

2006-08-11 Added scale free Ellipse patch for Agg - CM

2006-08-10 Added converters to and from julian dates to matplotlib.dates
           (num2julian and julian2num) - JDH

2006-08-08 Fixed widget locking so multiple widgets could share the
           event handling - JDH

2006-08-07 Added scale free Ellipse patch to SVG and PS - CM

2006-08-05 Re-organized imports in numerix for numpy 1.0b2 -- TEO

2006-08-04 Added draw_markers to PDF backend. - JKS
